--- a/libft/Makefile
+++ b/libft/Makefile
@@ -32,6 +32,7 @@ SRC = ft_isalpha.c \
 	ft_substr.c \
 	ft_strjoin.c \
 	ft_strtrim.c \
+	ft_strndup.c \
 	ft_split.c \
 	ft_itoa.c \
 	ft_strmapi.c \
