Makefiles editados (ahora funcionan bien), comprueba todos los parametros del mapa correctamente y se abre la ventana

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -26,8 +26,7 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	make -C $(LIBFT_DIR)
-	cp $(LIBFT) ./
-	$(AR) $(NAME) $(OBJ) libft.a
+	$(AR) $(NAME) $(OBJ)
 
 %.o: %.c $(MAKEFILE) $(PRINTF)
 	$(CC) $(CFLAGS) -c $< -o $@
