--- a/libft/Makefile
+++ b/libft/Makefile
@@ -50,7 +50,9 @@ SRC = ft_isalpha.c \
 	ft_lstdelone_bonus.c \
 	ft_lstclear_bonus.c \
 	ft_lstiter_bonus.c \
-	ft_lstmap_bonus.c
+	ft_lstmap_bonus.c \
+	ft_free.c \
+	ft_array_count.c \
 
 OBJ = $(SRC:.c=.o)
 
